# ddi

./: README.md  pyproject.toml
src/: CREATE_DATABASE.sql  CREATE_TABLES.sql  Upload_data_postgres.py  generate_all.py  generate_customer_json_data.py  generate_json_data.py  products.json
src/experiment_1/: mongoDB_exp1.py  postgres_exp1.py
src/experiment_2/: mongoDB_exp2.py  postgres_exp2.py
src/experiment_3/: mongoDB_exp3.py  postgres_exp3.sql
src/experiment_4/: mongoDB_exp4.py  postgres_exp4.sql
