[tool.poetry]
name = "ddi"
version = "0.1.0"
description = ""
authors = ["denis.schatzmann@students.fhnw.ch <denis.schatzmann@students.fhnw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.10.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
